--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,9 @@ jobs:
         goos: [linux, windows, darwin]
         goarch: [amd64, arm64]
     steps:
+      - uses: ConorMacBride/install-package@v1
+        with:
+          apt: libx11-dev
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1
         with:
